--- a/package.json
+++ b/package.json
@@ -5,15 +5,30 @@
   "homepage": "https://moduscreate.com",
   "author": "Modus Create <contact@moduscreate.com> (http://moduscreate.com)",
   "repository": "github:ModusCreateOrg/ion-router-vue",
-  "main": "index.js",
+  "main": "dist/ion-router-vue.common.js",
+  "module": "dist/ion-router-vue.esm.js",
+  "unpkg": "dist/ion-router-vue.js",
+  "jsdelivr": "dist/ion-router-vue.js",
   "license": "MIT",
+  "files": [
+    "src/*.js",
+    "dist/*.js"
+  ],
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "rollup -c",
+    "watch": "rollup -wc",
+    "prod": "rollup -c --configProd"
   },
   "devDependencies": {
-    "vue": "^2.5.16",
+    "buble": "^0.19.3",
+    "rollup": "^0.62.0",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-vue": "^4.3.0",
+    "vue-template-compiler": "^2.5.16"
+  },
+  "dependencies": {
     "vue-router": "^3.0.1"
   }
 }
