--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
-.DS_Store
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-dist/*.map
-dist/*.gz
-
-# ignore all files starting with . or ~
 .*
 ~*
 
-# ignore node/grunt dependency directories
+dist/
 node_modules/
 
 # ignore log files
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# -------------------------
-# BEGIN Whitelisted Files
-# -------------------------
-
-# track these files, if they exist
 !.gitignore
 !.editorconfig
 !.eslintrc.js
