--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "@modus/ion-vue-router",
+  "name": "@modus/ionic-vue",
   "version": "1.0.0",
   "description": "Ion Vue Router",
   "homepage": "https://moduscreate.com",
   "author": "Michael Tintiuc <michael.tintiuc@moduscreate.com>",
   "user": "michaeltintiuc",
   "license": "MIT",
-  "repository": "github:ModusCreateOrg/ion-vue-router",
-  "main": "dist/ion-vue-router.common.js",
-  "module": "dist/ion-vue-router.esm.js",
-  "unpkg": "dist/ion-vue-router.js",
-  "jsdelivr": "dist/ion-vue-router.js",
+  "repository": "github:ModusCreateOrg/ionic-vue",
+  "main": "dist/ionic-vue.common.js",
+  "module": "dist/ionic-vue.esm.js",
+  "unpkg": "dist/ionic-vue.js",
+  "jsdelivr": "dist/ionic-vue.js",
   "files": [
     "src/",
     "dist/*.js"
   ],
   "bugs": {
-    "url": "https://github.com/ModusCreateOrg/ion-vue-router/issues"
+    "url": "https://github.com/ModusCreateOrg/ionic-vue/issues"
   },
   "keywords": [
     "ionic",
@@ -29,7 +29,11 @@
     "component",
     "navigation",
     "nav",
-    "transition"
+    "transition",
+    "api",
+    "wrapper",
+    "framework",
+    "delegate"
   ],
   "scripts": {
     "dev": "rollup -c ./build/rollup.config.js",
@@ -53,6 +57,7 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   }
 }
