--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-vue": "^4.3.0",
-    "vue-template-compiler": "^2.5.16"
+    "rollup-plugin-vue": "^4.3.0"
   },
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
     "vue-router": "^3.0.1"
   }
 }
