--- a/package.json
+++ b/package.json
@@ -40,20 +40,27 @@
     "watch": "rollup -w -c ./build/rollup.config.js",
     "prod": "NODE_ENV=production rollup -c ./build/rollup.config.js --configProd",
     "release": "bash ./build/release.sh",
-    "lint": "eslint src/* build/*.js"
+    "lint": "eslint src/**/* build/*.js test/**/*",
+    "test": "jest"
   },
   "devDependencies": {
+    "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
     "buble": "^0.19.3",
     "eslint": "^5.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-jest": "^21.18.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-vue": "^4.5.0",
+    "jest": "^23.4.2",
+    "jest-vue-preprocessor": "^1.4.0",
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-vue": "^4.3.0"
+    "rollup-plugin-vue": "^4.3.0",
+    "vue-test-utils": "^1.0.0-beta.11"
   },
   "dependencies": {
     "vue": "^2.5.16",
