fixed step definition

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,8 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-
 
-      - run:
-        - npm install
-        - npm i vue vue-router vue-template-compiler
+      - run: npm install
+      - run: npm i vue vue-router vue-template-compiler
 
       - save_cache:
           paths:
