Add code coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:8.10
+      - image: circleci/python:3.6.1
 
     working_directory: ~/repo
 
@@ -21,6 +22,8 @@ jobs:
             npm i -ci
             # Peer dependencies
             npm i vue vue-router vue-template-compiler
+            # Code coverage
+            sudo pip install codecov
 
       - save_cache:
           paths:
@@ -28,6 +31,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: npm test
+      - run: npm test && codecov
 
 
