Add dirs to exclude

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=ionic_vue
 sonar.projectName=ionic_vue
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.exclusions=coverage/**, sonar-scanner-3.2.0.1227-linux/**
