Fixed typo in file name

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   },
   "jestSonar": {
     "reportPath": "reports",
-    "reportFile": "test-reporter.xml",
+    "reportFile": "test-report.xml",
     "indent": 4
   }
 }
