Include install command for jest-sonar-report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,11 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      - run:
+          command: |
+            npm i -D jest-sonar-reporter
+
       # run tests!
-      - run: mkdir reports
       - run: npm test && bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
       - run: npm run test
      
