--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-vue": "^4.5.0",
     "jest": "^23.4.2",
-    "jest-vue-preprocessor": "^1.4.0",
     "jest-sonar-reporter": "^2.0.0",
+    "jest-vue-preprocessor": "^1.4.0",
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -67,12 +67,14 @@
     "vue-template-compiler": "^2.5.16",
     "vue-router": "^3.0.1"
   },
-  "jest": {
-    "testResultsProcessor": "jest-sonar-reporter"
-  },
   "jestSonar": {
     "reportPath": "reports",
     "reportFile": "test-report.xml",
     "indent": 4
+  },
+  "dependencies": {
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.16"
   }
 }
