Added new parameter to project.properties for sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.projectName=ionic_vue
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.exclusions=coverage/**, sonar-scanner-3.2.0.1227-linux/**, node_modules/js-base64/*.html, node_modules/sprintf-js/demo/*.html, node_modules/terser/tools/*.html, node_modules/uglify-js/tools*.html, node_modules/uri-js/tests/*.html, node_modules/js-base64/test-moment/*.html, node_modules/js-base64/test/*.html, node_modules/uglify-js/tools/*.html
+sonar.tests=test
 sonar.testExecutionReportPaths=reports/test-report.xml
