Added in lcov report path param

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.tests=test
 sonar.testExecutionReportPaths=reports/test-report.xml
 sonar.test.inclusions=**/*test*/**
 sonar.exclusions=**/*test*/**
+sonar.javascript.lcov.reportPaths=coverage/
