Update lcov report path param for sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.tests=test
 sonar.testExecutionReportPaths=reports/test-report.xml
 sonar.test.inclusions=**/*test*/**
 sonar.exclusions=**/*test*/**
-sonar.javascript.lcov.reportPaths=coverage/
+sonar.javascript.lcov.reportPaths=coverage/lcov-report
