--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,21 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      - run:
+          command: |
+            npm i -D jest-sonar-reporter
+
       # run tests!
       - run: npm test && bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
+
+      # SonarQube download, config and scanning
+      - run: echo "Starting SonarQube scan"
+      - run: wget https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.2.0.1227-linux.zip
+      - run: unzip sonar-scanner-cli-3.2.0.1227-linux.zip
+      - run: echo "sonar.host.url=https://sonarcloud.io" > sonar-scanner-3.2.0.1227-linux/conf/sonar-scanner.properties
+      - run: echo "sonar.login=$sonarqubekey" >> sonar-project.properties
+      - run: echo "sonar.organization=$sonarorg" >> sonar-project.properties 
+      - run: sonar-scanner-3.2.0.1227-linux/bin/sonar-scanner
+      - run: echo "Scan complete, data sent to sonarcloud"
 
 
