--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=ionic_vue
 sonar.projectName=ionic_vue
 sonar.projectVersion=1.0
-sonar.sources=.
-sonar.exclusions=build/**, sonar-scanner-3.2.0.1227-linux/**, node_modules/**
+sonar.sources=src
+sonar.exclusions=coverage/**, build/**, sonar-scanner-3.2.0.1227-linux/**, node_modules/**
 sonar.coverage.exclusions=coverage/**, build/**, jest.config.js
 sonar.tests=test
 sonar.testExecutionReportPaths=reports/test-report.xml
