--- a/package.json
+++ b/package.json
@@ -57,10 +57,9 @@
     "jest-vue-preprocessor": "^1.4.0",
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-terser": "^1.0.1",
     "rollup-plugin-vue": "^4.3.0",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "@vue/test-utils": "^1.0.0-beta.24"
   },
   "peerDependencies": {
     "vue": "^2.5.16",
