--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "repository": "github:ModusCreateOrg/ionic-vue",
   "main": "dist/ionic-vue.common.js",
+  "typings": "dist/ionic-vue.common.js",
   "module": "dist/ionic-vue.esm.js",
   "unpkg": "dist/ionic-vue.js",
   "jsdelivr": "dist/ionic-vue.js",
@@ -40,9 +41,12 @@
     "watch": "rollup -w -c ./build/rollup.config.js",
     "prod": "NODE_ENV=production rollup -c ./build/rollup.config.js --configProd",
     "lint": "eslint src/**/* test/**/*",
+    "lint.ts": "tslint --project .",
+    "lint.fix": "tslint --project . --fix",
     "test": "jest --coverage --verbose"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.24",
     "babel-jest": "^23.4.2",
     "babel-preset-env": "^1.7.0",
     "buble": "^0.19.3",
@@ -58,8 +62,12 @@
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-typescript": "1.0.0",
     "rollup-plugin-vue": "^4.3.0",
-    "@vue/test-utils": "^1.0.0-beta.24"
+    "tslib": "1.9.3",
+    "tslint": "5.11.0",
+    "tslint-ionic-rules": "0.0.19",
+    "typescript": "3.1.1"
   },
   "peerDependencies": {
     "vue": "^2.5.16",
@@ -71,5 +79,6 @@
     "reportPath": "reports",
     "reportFile": "test-report.xml",
     "indent": 4
-  }
+  },
+  "dependencies": {}
 }
