--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "lint": "eslint src/**/* test/**/*",
     "lint.ts": "tslint --project .",
     "lint.fix": "tslint --project . --fix",
-    "test": "jest --coverage --verbose"
+    "test": "jest --coverage --verbose",
+    "install.peer": "npm i --no-save vue vue-template-compiler vue-router @ionic/core"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.24",
@@ -62,12 +63,14 @@
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-typescript": "1.0.0",
+    "rollup-plugin-typescript2": "^0.17.1",
     "rollup-plugin-vue": "^4.3.0",
     "tslib": "1.9.3",
     "tslint": "5.11.0",
     "tslint-ionic-rules": "0.0.19",
-    "typescript": "3.1.1"
+    "typescript": "3.1.1",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^7.2.0"
   },
   "peerDependencies": {
     "vue": "^2.5.16",
@@ -79,6 +82,5 @@
     "reportPath": "reports",
     "reportFile": "test-report.xml",
     "indent": 4
-  },
-  "dependencies": {}
+  }
 }
