Point to right typings file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": "github:ModusCreateOrg/ionic-vue",
   "main": "dist/ionic-vue.common.js",
-  "typings": "dist/ionic-vue.d.ts",
+  "typings": "dist/index.d.ts",
   "module": "dist/ionic-vue.esm.js",
   "unpkg": "dist/ionic-vue.js",
   "jsdelivr": "dist/ionic-vue.js",
