--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modus/ionic-vue",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Ionic integration adapters for Vue",
   "homepage": "https://moduscreate.com",
   "author": "Michael Tintiuc <michael.tintiuc@moduscreate.com>",
@@ -8,6 +8,7 @@
   "license": "MIT",
   "repository": "github:ModusCreateOrg/ionic-vue",
   "main": "dist/ionic-vue.common.js",
+  "typings": "dist/index.d.ts",
   "module": "dist/ionic-vue.esm.js",
   "unpkg": "dist/ionic-vue.js",
   "jsdelivr": "dist/ionic-vue.js",
@@ -40,9 +41,13 @@
     "watch": "rollup -w -c ./build/rollup.config.js",
     "prod": "NODE_ENV=production rollup -c ./build/rollup.config.js --configProd",
     "lint": "eslint src/**/* test/**/*",
-    "test": "jest --coverage --verbose"
+    "lint.ts": "tslint --project .",
+    "lint.fix": "tslint --project . --fix",
+    "test": "jest --coverage --verbose",
+    "install.peer": "npm i --no-save vue vue-template-compiler vue-router @ionic/core"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.24",
     "babel-jest": "^23.4.2",
     "babel-preset-env": "^1.7.0",
     "buble": "^0.19.3",
@@ -58,8 +63,14 @@
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.17.1",
     "rollup-plugin-vue": "^4.3.0",
-    "@vue/test-utils": "^1.0.0-beta.24"
+    "tslib": "1.9.3",
+    "tslint": "5.11.0",
+    "tslint-ionic-rules": "0.0.19",
+    "typescript": "3.1.1",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^7.2.0"
   },
   "peerDependencies": {
     "vue": "^2.5.16",
