Streamline peer dependencies install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: |
             npm i -ci
             # Peer dependencies
-            npm i vue vue-router vue-template-compiler
+            npm run install.peer
 
       - save_cache:
           paths:
@@ -37,7 +37,7 @@ jobs:
       - run: unzip sonar-scanner-cli-3.2.0.1227-linux.zip
       - run: echo "sonar.host.url=https://sonarcloud.io" > sonar-scanner-3.2.0.1227-linux/conf/sonar-scanner.properties
       - run: echo "sonar.login=$sonarqubekey" >> sonar-project.properties
-      - run: echo "sonar.organization=$sonarorg" >> sonar-project.properties 
+      - run: echo "sonar.organization=$sonarorg" >> sonar-project.properties
       - run: sonar-scanner-3.2.0.1227-linux/bin/sonar-scanner
       - run: echo "Scan complete, data sent to sonarcloud"
 
