--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "user": "michaeltintiuc",
   "license": "MIT",
   "repository": "github:ModusCreateOrg/ionic-vue",
-  "main": "dist/ionic-vue.esm.js",
+  "main": "dist/ionic-vue.common.js",
   "typings": "types/index.d.ts",
   "module": "dist/ionic-vue.esm.js",
   "unpkg": "dist/ionic-vue.js",
