--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
 
 
       # run tests!
-      - run: npm test && bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
+      # - run: npm test && bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
 
       # SonarQube download, config and scanning
       - run: echo "Starting SonarQube scan"
