--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.sources=src
 sonar.exclusions=coverage/**, build/**, sonar-scanner-3.2.0.1227-linux/**, node_modules/**
 sonar.coverage.exclusions=coverage/**, build/**, jest.config.js
 sonar.tests=test
-sonar.testExecutionReportPaths=reports/test-report.xml
+# sonar.testExecutionReportPaths=reports/test-report.xml
 sonar.test.inclusions=**/*test*/**
 sonar.exclusions=**/*test*/**
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
