--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "vue-router": "^3.0.1",
-    "@ionic/core": "latest"
+    "@ionic/core": "^4.10.0"
   },
   "jestSonar": {
     "reportPath": "reports",
