--- a/package.json
+++ b/package.json
@@ -57,26 +57,26 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.24",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^25.3.0",
     "babel-preset-env": "^1.7.0",
-    "jest": "^23.6.0",
+    "jest": "^25.3.0",
     "jest-sonar-reporter": "^2.0.0",
     "jest-vue-preprocessor": "^1.4.0",
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.17.1",
+    "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-vue": "^4.3.0",
-    "tslib": "1.9.3",
-    "tslint": "5.11.0",
-    "tslint-ionic-rules": "0.0.19",
-    "typescript": "3.1.1"
+    "tslib": "^1.11.1",
+    "tslint": "^6.1.1",
+    "tslint-ionic-rules": "^0.0.21",
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "vue": "^2.5.16",
-    "vue-template-compiler": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "@ionic/core": "^4.10.0"
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "@ionic/core": "^5.0.7"
   },
   "jestSonar": {
     "reportPath": "reports",
