--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "lint": "tslint --project .",
     "lint.fix": "tslint --project . --fix",
     "test": "jest --coverage --verbose",
-    "install.peer": "npm i --no-save vue vue-template-compiler vue-router @ionic/core"
+    "install.peer": "npm i --no-save vue vue-template-compiler vue-router @ionic/core",
+    "clean": "node ./scripts/clean.js"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.24",
