--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     "clean": "node ./scripts/clean.js"
   },
   "devDependencies": {
-    "@vue/test-utils": "^2.0.0-alpha.0",
-    "babel-jest": "^25.3.0",
+    "@vue/test-utils": "^2.0.0-alpha.2",
+    "babel-jest": "^25.4.0",
     "babel-preset-env": "^1.7.0",
-    "jest": "^25.3.0",
+    "jest": "^25.4.0",
     "jest-sonar-reporter": "^2.0.0",
     "jest-vue-preprocessor": "^1.4.0",
     "rollup": "^0.62.0",
@@ -72,9 +72,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "vue": "next",
-    "vue-router": "next",
-    "@ionic/core": "^5.0.7"
+    "@ionic/core": "^5.0.7",
+    "vue": "^3.0.0-beta.3",
+    "vue-router": "^4.0.0-alpha.7"
   },
   "jestSonar": {
     "reportPath": "reports",
