Update release script

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "dev": "rollup -c ./build/rollup.config.js",
     "watch": "rollup -w -c ./build/rollup.config.js",
-    "prod": "npm run clean && NODE_ENV=production rollup -c ./build/rollup.config.js --configProd",
+    "prod": "npm run lint && npm run clean && NODE_ENV=production rollup -c ./build/rollup.config.js --configProd",
     "lint": "tslint --project . --fix",
     "test": "jest --coverage --verbose",
     "clean": "node ./scripts/clean.js"
