--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "types",
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
@@ -25,6 +26,7 @@
     "pretty": true,
     "removeComments": false,
     "rootDir": "src",
+    "sourceMap": true,
     "strictPropertyInitialization": false,
     "target": "es5"
   },
