--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
+    "ts-transformer-keys": "^0.4.2",
     "tslib": "^1.11.2",
     "tslint": "^6.1.2",
     "tslint-ionic-rules": "^0.0.21",
