--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.5",
-    "@vue/test-utils": "^2.0.0-alpha.6",
+    "@types/node": "^14.0.14",
+    "@vue/test-utils": "^2.0.0-alpha.8",
     "babel-jest": "^25.5.1",
     "babel-preset-env": "^1.7.0",
     "jest": "^25.5.4",
@@ -68,19 +68,19 @@
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.27.0",
-    "ts-jest": "^26.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "ts-jest": "^26.1.1",
     "ts-loader": "^7.0.5",
     "ts-transformer-keys": "^0.4.2",
-    "tslib": "^1.11.2",
+    "tslib": "^1.13.0",
     "tslint": "^6.1.2",
     "tslint-ionic-rules": "^0.0.21",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@ionic/core": "^5.1.0",
-    "vue": "^3.0.0-beta.15",
-    "vue-router": "^4.0.0-alpha.12"
+    "@ionic/core": "^5.2.3",
+    "vue": "^3.0.0-beta.18",
+    "vue-router": "^4.0.0-beta.1"
   },
   "jestSonar": {
     "reportPath": "reports",
