--- a/package.json
+++ b/package.json
@@ -52,16 +52,18 @@
     "dev": "rollup -c ./build/rollup.config.js",
     "watch": "rollup -w -c ./build/rollup.config.js",
     "prod": "npm run lint && npm run clean && NODE_ENV=production rollup -c ./build/rollup.config.js --configProd",
-    "lint": "tslint --project . --fix",
+    "lint": "eslint --ext .ts src/** --fix",
     "test": "jest --coverage --verbose",
     "clean": "node ./scripts/clean.js"
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/parser": "^3.9.0",
     "@vue/test-utils": "^2.0.0-beta.2",
     "babel-jest": "^25.5.1",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^7.6.0",
     "jest": "^25.5.4",
     "jest-sonar-reporter": "^2.0.0",
     "jest-vue-preprocessor": "^1.4.0",
