--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "dev": "rollup -c ./build/rollup.config.js && npm run vetur",
     "watch": "rollup -w -c ./build/rollup.config.js",
-    "prod": "npm run lint && npm run clean && NODE_ENV=production rollup -c ./build/rollup.config.js --configProd npm run vetur",
+    "prod": "npm run lint && npm run clean && NODE_ENV=production rollup -c ./build/rollup.config.js --configProd && npm run vetur",
     "lint": "eslint --ext .ts src/** --fix",
     "test": "jest --coverage --verbose",
     "clean": "node ./scripts/clean.js",
