--- a/package.json
+++ b/package.json
@@ -55,16 +55,19 @@
     "prod": "npm run lint && npm run clean && NODE_ENV=production rollup -c ./build/rollup.config.js --configProd && npm run vetur",
     "lint": "eslint --ext .ts src/** --fix",
     "test": "jest --coverage --verbose",
-    "clean": "node ./scripts/clean.js",
-    "vetur": "node ./scripts/vetur.js"
+    "clean": "ts-node --dir ./scripts clean.ts",
+    "vetur": "ts-node --dir ./scripts vetur.ts"
   },
   "devDependencies": {
+    "@ionic/docs": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.27",
     "@typescript-eslint/parser": "^3.9.0",
     "@vue/test-utils": "^2.0.0-beta.2",
     "babel-jest": "^25.5.1",
     "babel-preset-env": "^1.7.0",
+    "change-case": "^4.1.1",
     "eslint": "^7.6.0",
     "jest": "^25.5.4",
     "jest-sonar-reporter": "^2.0.0",
@@ -72,9 +75,9 @@
     "rollup": "^2.26.4",
     "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-typescript2": "^0.27.2",
-    "@rollup/plugin-node-resolve": "^9.0.0",
     "ts-jest": "^26.1.4",
     "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
     "ts-transformer-keys": "^0.4.2",
     "tslib": "^1.13.0",
     "tslint": "^6.1.3",
@@ -92,7 +95,7 @@
     "indent": 4
   },
   "vetur": {
-    "tags": "vetur/tags.json",
-    "attributes": "vetur/attributes.json"
+    "tags": "dist/vetur-tags.json",
+    "attributes": "dist/vetur-attributes.json"
   }
 }
