Improve vetur support and build

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "alwaysStrict": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "plugins": [
+      {
+        "transform": "ts-transformer-keys/transformer"
+      }
+    ]
   }
 }
