--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "user": "michaeltintiuc",
   "license": "MIT",
   "repository": "github:ModusCreateOrg/ionic-vue",
-  "main": "dist/ionic-vue.common.js",
+  "main": "dist/ionic-vue.js",
   "typings": "types/index.d.ts",
-  "module": "dist/ionic-vue.esm.js",
+  "module": "dist/ionic-vue.js",
   "unpkg": "dist/ionic-vue.js",
   "jsdelivr": "dist/ionic-vue.js",
   "files": [
     "types/",
-    "dist/",
-    "vetur/"
+    "dist/"
   ],
   "sideEffects": false,
   "bugs": {
@@ -56,7 +55,7 @@
     "lint": "eslint --ext .ts src/** --fix",
     "test": "jest --coverage --verbose",
     "clean": "ts-node --dir ./scripts clean.ts",
-    "vetur": "ts-node --dir ./scripts vetur.ts"
+    "vetur": "ts-node -C ttypescript --dir ./scripts vetur.ts"
   },
   "devDependencies": {
     "@ionic/docs": "^5.3.1",
@@ -82,12 +81,13 @@
     "tslib": "^1.13.0",
     "tslint": "^6.1.3",
     "tslint-ionic-rules": "^0.0.21",
+    "ttypescript": "^1.5.10",
     "typescript": "^3.9.7"
   },
   "dependencies": {
     "@ionic/core": "^5.3.1",
-    "vue": "^3.0.0-rc.5",
-    "vue-router": "^4.0.0-beta.6"
+    "vue": "^3.0.0-rc.7",
+    "vue-router": "^4.0.0-beta.7"
   },
   "jestSonar": {
     "reportPath": "reports",
