--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
   },
   "dependencies": {
     "@ionic/core": "^0.4.0",
-    "vue": "^3.0.0-rc.7",
-    "vue-router": "^4.0.0-beta.7"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-beta.10"
   },
   "jestSonar": {
     "reportPath": "reports",
