--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modus/ionic-vue",
-  "version": "3.0.0-alpha.17",
+  "version": "3.0.0-beta.1",
   "description": "Vue 3 integration adapters for Ionic 5",
   "homepage": "https://moduscreate.com",
   "author": "Michael Tintiuc <michael.tintiuc@moduscreate.com>",
